--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
 </head>
 <body>
     
 
+
+    <!--! Pie de página -->
+
+    <footer class="d-flex justify-content-between align-items-center mt-5 pt-5 pb-2 px-5" id="FooterBasket">
+        <!--! mt:margin top , pt:padding-top, pb:padding bottom, px: padding horizontal-->
+        <div>
+            <p>&copy; BASKETBALL E-COMMERCE</p>
+            <p>Todos los derechos reservados.</p>
+        </div>
+        <div class="lista-autores d-flex">
+            <ul class="">
+                <!--! m: margin , lg: large p:padding-->
+                <!--! Aplica un padding y un margen en todos lados para cuando la pantalla es grande-->
+                <li class="equipo m-lg-2 p-lg-2">Andrés Alfonso</li>
+                <li class="equipo m-lg-2 p-lg-2">Diana Carolina</li>
+                <li class="equipo m-lg-2 p-lg-2">Sergio Mesa</li>
+                <li class="equipo m-lg-2 p-lg-2">Pimienta Angel</li>
+            </ul>
+        </div>
+        <div class="redes-sociales d-flex flex-column">
+            <a href="https://github.com/SergioMesa2002/hackeaton-1.git"><i class="bi bi-github fs-1"></i></a>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram fs-1"></i></a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
