Adición del banner

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <title>Basketball E-Commerce</title>
 </head>
 <body>
+
+    <section class="banner">
+        <!-- Video de fondo -->
+        <video class="banner-video" autoplay muted loop playsinline>
+            <source src="./assets/video.mp4" type="video/mp4" />
+        </video>
+    
+        <!-- Contenido centrado -->
+        <div class="banner-content">
+            <h1 class="banner-title">BASKETBALL</h1>
+            <p class="banner-subtitle">Tu destino para el mejor equipamiento deportivo</p>
+            <a href="#productos" class="banner-cta">Explorar Productos</a>
+        </div>
+    </section>
+
+
   <div class="container my-5">
     <button id="btn-toggle-carrito" class="btn btn-primary mb-3">🛒 Ver carrito</button>
     <div class="row" id="productos">
