--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-d">
+            <a href="#">Inicio</a>
+        </div>
+
+        <a class="logo" href="index.html">
+          <img class="balon" src="img/balon.png" alt="Basketball Logo">
+          BasketZone
+        </a>
+
+        <div class="nav-i">
+            <a href="#">Tienda</a>
+        </div>
+    </nav>
     
 
     <script src="script.js"></script>
