--- a/catalogo.html
+++ b/catalogo.html
@@ -16,7 +16,7 @@
             <a href="#banner">Inicio</a>
         </div>
 
-        <a class="logo" href="index.html">
+        <a class="logo" href="#">
             <img class="balon" src="assets/balon.png" alt="Basketball Logo">
             BasketZone
         </a>
@@ -46,7 +46,7 @@
             
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/balonnba.webp" class="card-img-top">
+                    <img src="assets/balonnba.png" class="card-img-top">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Balón NBA</h6>
                         <p class="card-texto text-start">Balón oficial de la NBA. Excelente para partidos y entrenamiento.</p>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/balonnba.webp" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/balonnba.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Balón NBA</h6>
                         <p>$120.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Balón NBA" data-price="120000" data-image="assets/balonnba.webp">Agregar al carrito</button>
@@ -67,7 +67,7 @@
 
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/Camiseta_Lakers.jpg" class="card-img-top" alt="Balón NBA">
+                    <img src="assets/Camiseta_Lakers.png" class="card-img-top" alt="Balón NBA">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Camiseta Lakers</h6>
                         <p class="card-texto text-start">Camiseta oficial del equipo de los Lakers.</p>
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/Camiseta_Lakers.jpg" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/Camiseta_Lakers.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Camiseta Lakers</h6>
                         <p>$220.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Camiseta Lakers" data-price="220000" data-image="assets/Camiseta_Lakers.jpg">Agregar al carrito</button>
@@ -88,7 +88,7 @@
 
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/pantalonetalakers.webp" class="card-img-top" alt="Balón NBA">
+                    <img src="assets/pantalonetalakers.png" class="card-img-top" alt="Balón NBA">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Pantaloneta Lakers</h6>
                         <p class="card-texto text-start">Pantaloneta oficial del equipo de los Lakers.</p>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/pantalonetalakers.webp" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/pantalonetalakers.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Pantaloneta Lakers</h6>
                         <p>$150.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Pantaloneta Lakers" data-price="150000" data-image="assets/pantalonetalakers.webp">Agregar al carrito</button>
@@ -109,7 +109,7 @@
 
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/manga.jpg" class="card-img-top" alt="Balón NBA">
+                    <img src="assets/manga.png" class="card-img-top" alt="Balón NBA">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Manga de baloncesto NBA</h6>
                         <p class="card-texto text-start">Manga de baloncesto oficial de la NBA.</p>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/manga.jpg" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/manga.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Manga de baloncesto NBA</h6>
                         <p>$80.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Manga de baloncesto NBA" data-price="80000" data-image="assets/manga.jpg">Agregar al carrito</button>
@@ -130,7 +130,7 @@
 
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/tableropared.jpg" class="card-img-top" alt="Balón NBA">
+                    <img src="assets/tableropared.png" class="card-img-top" alt="Balón NBA">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Tablero de pared</h6>
                         <p class="card-texto text-start">Tablero de baloncesto para ajustar en la pared.</p>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/tableropared.jpg" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/tableropared.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Tablero de pared</h6>
                         <p>$280.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Tablero de pared" data-price="280000" data-image="assets/tableropared.jpg">Agregar al carrito</button>
@@ -172,7 +172,7 @@
 
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/zapatos.jpg" class="card-img-top" alt="Balón NBA">
+                    <img src="assets/zapatos.png" class="card-img-top" alt="Balón NBA">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Zapatos baloncesto</h6>
                         <p class="card-texto text-start">Zapatos baloncesto ideales para entrenamiento.</p>
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/zapatos.jpg" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/zapatos.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Zapatos baloncesto</h6>
                         <p>$320.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Zapatos baloncesto" data-price="320000" data-image="assets/zapatos.jpg">Agregar al carrito</button>
@@ -193,7 +193,7 @@
 
             <div class="col">
                 <div class="card h-100 tarjeta-borde position-relative hover-card">
-                    <img src="assets/camisetabaloncesto.jpg" class="card-img-top" alt="Balón NBA">
+                    <img src="assets/camisetabaloncesto.png" class="card-img-top" alt="Balón NBA">
                     <div class="card-body">
                         <h6 class="card-titulo text-start">Camiseta esqueleto baloncesto</h6>
                         <p class="card-texto text-start">Camiseta de baloncesto para entrenamiento.</p>
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/camisetabaloncesto.jpg" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/camisetabaloncesto.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Camiseta esqueleto baloncesto</h6>
                         <p>$70.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Camiseta esqueleto baloncesto" data-price="70000" data-image="assets/camisetabaloncesto.jpg">Agregar al carrito</button>
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <div class="hover-info p-3 rounded shadow">
-                        <img src="assets/tablero.webp" class="img-fluid rounded mb-2" alt="Preview">
+                        <img src="assets/tablero.png" class="img-fluid rounded mb-2" alt="Preview">
                         <h6 class="text-start">Tablero desplegable</h6>
                         <p>$350.000</p>
                         <button class="btn btn-sm btn-custom add-to-cart" data-name="Tablero desplegable" data-price="350000" data-image="assets/tablero.webp">Agregar al carrito</button>
